# sysmon-ai

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD.md  COMPLETION_SUMMARY.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  TROUBLESHOOTING.md  config.example.yaml  pyproject.toml  setup.sh  sysmon.spec  verify_installation.py
.github/workflows/: ci.yml
sysmon_ai/: __init__.py  cli.py  config.py  logging_setup.py
sysmon_ai/alerts/: __init__.py  notify.py  rules.py
sysmon_ai/data/: __init__.py  repository.py  schema.sql
sysmon_ai/detection/: __init__.py  calibrator.py  detector.py  events.py
sysmon_ai/evaluation/: __init__.py  evaluate.py  metrics.py  simulate.py
sysmon_ai/features/: __init__.py  transformers.py  windows.py
sysmon_ai/ingest/: __init__.py  sampler.py  writer.py
sysmon_ai/models/: __init__.py  base.py  forecaster.py  isolation_forest.py  persistence.py
sysmon_ai/ui/: __init__.py  dashboard.py  panels.py
sysmon_ai/utils/: __init__.py  platform.py  sparkline.py  timeutils.py
tests/: conftest.py
tests/integration/: test_workflow.py
tests/unit/: test_features.py  test_models.py  test_repository.py
